# ftb-quest-manager

./: .gitignore  LICENSE  README.md  cli.py  main_loop_diagram.mmd  pyproject.toml  quick_test.py  requirements.txt  setup.py  test_imports.py  test_package.py
.github/workflows/: python-package.yml
module/: __init__.py  __main__.py  ftb_loader.py  quest_navigator.py
module/controller/: ftb_loader.py  quest_config.py  quest_edit.py  snbt_to_json_loader.py
module/model/: quest_models.py
module/navigation/: NavigationState.py
module/view/: display_chapters.py  display_data.py  display_quests.py  display_task_reward.py  quest_view.py
tests/: test_full_suite.py  test_module.py  tree_builder.py
tests/cwd_test/config/ftbquests/quests/: chapter_groups.snbt
tests/cwd_test/config/ftbquests/quests/chapters/: ae2.snbt  drawer.snbt  shop.snbt  welcome.snbt
tests/cwd_test/config/ftbquests/quests/lang/: en_us.snbt
