[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftb-quest-manager"
version = "1.0.0"
description = "A Python tool for viewing and navigating FTB (Feed The Beast) quest data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FTB Quest Viewer Developer", email = "developer@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "ftb_snbt_lib>=1.0.0"
]

[project.scripts]
ftb-quest-manager = "cli:main"
ftb-manager = "cli:main"

[project.urls]
Homepage = "https://github.com/VML8/ftb-quest-manager"
Repository = "https://github.com/VML8/ftb-quest-manager"
Issues = "https://github.com/VML8/ftb-quest-manager/issues"

[tool.setuptools]
packages = ["module"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
module = ["*.py", "*.txt", "*.md"]
